--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         </a>
       </div>
     </div>
-    <footer class="text-gray-400 fixed bottom-0 rounded opacity-50">
+    <footer class="text-gray-400 fixed bottom-0 rounded opacity-50 p-2">
       Made with ❤️ by Jonte!
     </footer>
     <script defer>
