--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Days Since Atom</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <meta name="description" content="The Atom text editor is officially dead.">
+    <meta
+      name="description"
+      content="The Atom text editor is officially dead."
+    />
   </head>
   <body class="bg-[#343233]">
     <div
@@ -42,9 +45,13 @@
       Made with ❤️ by Jonte!
     </footer>
     <script defer>
-      document.getElementById("d").innerText = Math.ceil(
-        (new Date().getTime() - new Date("12/15/2022").getTime()) / 86400000
-      );
+      const update = () => {
+        document.getElementById("d").innerText = Math.ceil(
+          (new Date().getTime() - new Date("12/15/2022").getTime()) / 86400000
+        );
+      }
+      update()
+      setInterval(update, 1000*60*5);
     </script>
   </body>
 </html>
